<resources>
    <string name="app_name">FormSubmit</string>
    <string name="submit_form">Đơn điền thông tin</string>
    <string name="full_name">Họ và tên</string>
    <string name="hint_full_name">Nhập họ và tên của bạn</string>
    <string name="ID">Mã số sinh viên</string>
    <string name="type_ID">Nhập mã số sinh viên của bạn</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="gender">Giới tính</string>
    <string name="email">Email</string>
    <string name="type_email">Nhập email của bạn</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="type_phone_number">Nhập số điện thoại của bạn</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="isDateOfBirth">DD/MM/YYYY</string>
    <string name="address">Nơi ở hiện tại</string>
    <string name="city">Tỉnh thành</string>
    <string name="district">Quận/huyện</string>
    <string name="commune">Phường/xã</string>
    <string name="hobby">Sở thích</string>
    <string name="sport">Thể thao</string>
    <string name="cinema">Điện ảnh</string>
    <string name="music">Âm nhạc</string>
    <string name="agree_terms_and_condition">Tôi đồng ý với các điều khoản</string>
    <string name="terms_and_condition">Bằng cách tiếp tục, bạn đồng ý với những điều khoản và quy định chính sách của
        chúng tôi
    </string>
    <string name="submit">Submit</string>
</resources>